--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  math_expressions: ^2.4.0
+  intl: ^0.18.1
+  toggle_switch: ^2.1.0
 
 dev_dependencies:
   flutter_test:
