--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   math_expressions: ^2.4.0
   intl: ^0.18.1
-  toggle_switch: ^2.1.0
   flutter_swipe_detector: ^2.0.0
+  provider: ^6.0.5
+  shared_preferences: ^2.2.0
+  font_awesome_flutter: ^10.5.0
+  expand_tap_area: ^1.1.1
 
 dev_dependencies:
   flutter_test:
