--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,14 @@ dependencies:
   shared_preferences: ^2.2.0
   font_awesome_flutter: ^10.5.0
   expand_tap_area: ^1.1.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator:
+  build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
